--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="">
     <!-- Start: Header -->
-    <header class="header">
+    <header class="header sticky-header">
         <div class="container">
             <div class="grid gap-4 grid-cols-[1fr_auto] 2xl:grid-cols-[auto_1fr_auto] items-center">
                 <!-- Logo -->
@@ -26,20 +26,20 @@
 
                 <nav class="header__navbar hidden 2xl:block">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a href="#" class="nav-link">Formularz</a>
+                        <li class="nav-item">
+                            <a href="#section-formularz" class="nav-link active">Formularz</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">O Nas</a>
+                            <a href="#section-o-nas" class="nav-link">O Nas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Program</a>
+                            <a href="#section-program" class="nav-link">Program</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Oferta</a>
+                            <a href="#section-offer" class="nav-link">Oferta</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Kontakt</a>
+                            <a href="#section-contact-us" class="nav-link">Kontakt</a>
                         </li>
                     </ul>
                 </nav>
@@ -83,8 +83,8 @@
             <img src="assets/img/logo.png" alt="">
         </div>
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a href="#" class="nav-link">Formularz</a>
+            <li class="nav-item">
+                <a href="#" class="nav-link active">Formularz</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">O Nas</a>
@@ -130,7 +130,7 @@
     <!-- End: Offcanvas -->
     
     <!-- Start: Hero -->
-    <section class="hero-area bg-black bg-cover bg-center text-white min-h-[80vh] 2xl:pt-[150px] py-[100px]" style="background-image: url('./assets/img/hero-bg.png');">
+    <section class="hero-area bg-black bg-cover bg-center text-white min-h-[80vh] 2xl:pt-[150px] py-[100px]" id="section-formularz" style="background-image: url('./assets/img/hero-bg.png');">
         <div class="container max-w-[630px] text-center">
             <h1 class="text-[32px] lg:text-[40px] 2xl:text-[64px] font-bold mb-7 leading-[1]">Warsztat Hipnozy</h1>
             <div class="text-[14px] 2xl:text-[16px] lg:px-[50px] leading-[1.5] font-medium">
@@ -159,7 +159,7 @@
                 <div class="ebook 2xl:absolute text-start w-[300px] max-w-full 2xl:start-[calc(100%+2rem)] 2xl:top-1/2 2xl:-translate-y-1/2">
                     <div class="inline-flex justify-center items-center flex-col">
                         <img src="assets/img/ebook-gratis-grafika.png" alt="" class="max-w-full h-auto">
-                        <img class="-ms-[100px]" src="assets/img/ebook-arrow.png" alt="">
+                        <img class="-ms-[100px] -rotate-[120deg] 2xl:rotate-0 -scale-y-100 2xl:scale-y-100" src="assets/img/ebook-arrow.png" alt="">
                     </div>
                 </div>
 
@@ -190,7 +190,7 @@
     <!-- End: Hero -->
 
   <!-- Start: O Nas -->
-  <section class="o-nas py-[50px] lg:py-[100px] ">
+  <section class="o-nas py-[50px] lg:py-[100px]" id="section-o-nas">
     <div class="container">
         <div class="grid lg:grid-cols-[2fr_4fr] gap-8">
             <div class="o-nas-content text-center">
@@ -294,7 +294,7 @@
 
 
   <!-- Start: Offer -->
-  <section class="offer-area py-[50px] lg:pt-[100px] lg:pb-[150px] bg-black text-white bg-center bg-cover" style="background-image: url('./assets/img/offer-bg.png');">
+  <section class="offer-area py-[50px] lg:pt-[100px] lg:pb-[150px] bg-black text-white bg-center bg-cover" id="section-offer" style="background-image: url('./assets/img/offer-bg.png');">
     <div class="container">
         <div class="heading mb-7">
             <h2 class="text-center text-[26px] md:text-[42px] lg:text-[72px] font-bold leading-[1.3] mb-8">Oferta</h2>
@@ -331,7 +331,7 @@
                             niesamowitą pasją</li>
                     </ul>
                 <div class="text-center">
-                    <a href="#" class="btn--primary">Zapisz się</a>
+                    <a href="#section-program" class="btn--primary">Zapisz się</a>
                 </div>
             </div>
             
@@ -368,7 +368,7 @@
                             niesamowitą pasją</li>
                     </ul>
                 <div class="text-center">
-                    <a href="#" class="btn--primary">Zapisz się</a>
+                    <a href="#section-program" class="btn--primary">Zapisz się</a>
                 </div>
             </div>
 
@@ -403,7 +403,7 @@
                             stanów!</li>
                     </ul>
                 <div class="text-center">
-                    <a href="#" class="btn--primary">Zapisz się</a>
+                    <a href="#section-program" class="btn--primary">Zapisz się</a>
                 </div>
             </div>
         </div>
@@ -413,7 +413,7 @@
 
 
   <!-- Start: Program -->
-  <section class="program py-[50px] lg:py-[100px] bg-black text-white bg-center bg-cover" style="background-image: url('./assets/img/programs-bg.png');">
+  <section class="program py-[50px] lg:py-[100px] bg-black text-white bg-center bg-cover" id="section-program" style="background-image: url('./assets/img/programs-bg.png');">
     <div class="container max-w-[500px]">
         <div class="text-center mb-6"><!-- Heading -->
             <h5 class="text-[18px]">
@@ -443,7 +443,7 @@
   <!-- End: Program -->
 
   <!-- Start: Contact Us -->
-  <section class="contact-us py-[50px] lg:py-[100px] 2xl:py-[150px] bg-black text-white bg-cover bg-center" style="background-image: url('./assets/img/contact-bg.png');">
+  <section class="contact-us py-[50px] lg:py-[100px] 2xl:py-[150px] bg-black text-white bg-cover bg-center" id="section-contact-us" style="background-image: url('./assets/img/contact-bg.png');">
     <div class="container">
         <h2 class="text-center text-[26px] md:text-[42px] lg:text-[72px] font-bold leading-[1.3] mb-8">Skontaktuj się z nami</h2>
         <ul class="flex items-center justify-center gap-2 md:gap-4 mb-0">
