--- a/index.html
+++ b/index.html
@@ -165,8 +165,26 @@
 
                 <div class="bg-[#D9D9D9] text-black p-[40px]">
                     <h4 class="font-bold mb-6 text-[18px] leading-[1.3]">Zapisz się na webinar i odbierz bezpłatnego Ebooka!</h4>
+                    <form
+                        action="https://formspree.io/f/xzbnrzzj"
+                        method="POST"
+                        >
+                        <div class="form-group">
+                            <input type="email" class="input-control" name="email" placeholder="email*">
+                        </div>
+                        <div class="form-group">
+                            <textarea name="message" rows="6" class="input-control" placeholder="Message"></textarea>
+                        </div>
+                        <!-- your other form fields go here -->
+                        <div class="form-button">
+                            <button type="submit" class="btn--primary">Zapisz się</button>
+                            <div class="mt-3">
+                                <a href="#" class="font-thin text-[14px] leading-[1]">Polityka prywatności</a>
+                            </div>
+                        </div>
+                    </form>
     
-                    <form action="">
+                    <form action="" class="hidden">
                         <div class="form-group">
                             <input type="text" class="input-control" placeholder="Imię i nazwisko*">
                         </div>
@@ -421,7 +439,25 @@
                 a my skontaktujemy się, by opowiedzieć Ci więcej.
             </h5>
         </div><!-- Heading -->
-        <form action="#"><!-- Form -->
+        <form
+            action="https://formspree.io/f/xzbnrzzj"
+            method="POST"
+            >
+            <div class="form-group">
+                <input type="email" class="input-control" name="email" placeholder="email*">
+            </div>
+            <div class="form-group">
+                <textarea name="message" rows="6" class="input-control" placeholder="Message"></textarea>
+            </div>
+            <!-- your other form fields go here -->
+            <div class="form-button">
+                <button type="submit" class="btn--primary">Zapisz się</button>
+                <div class="mt-3">
+                    <a href="#" class="font-thin text-[14px] leading-[1]">Polityka prywatności</a>
+                </div>
+            </div>
+        </form>
+        <form action="#" class="hidden"><!-- Form -->
             <div class="form-group">
                 <input type="text" class="input-control" placeholder="Imię i nazwisko*" required>
             </div>
