--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <div class="form-button">
                             <button type="submit" class="btn--primary">Zapisz się</button>
                             <div class="mt-3">
-                                <a href="#" class="font-thin text-[14px] leading-[1]">Polityka prywatności</a>
+                                <a href="https://www.termsfeed.com/live/5d16cd30-96c8-44a2-b704-03389dddbec9" target="_blank" class="text-[14px] font-extralight transition-all duration-300 hover:text-primary">Polityka prywatności</a>
                             </div>
                         </div>
                     </form>
@@ -470,7 +470,7 @@
             <div class="form-button text-center">
                 <button type="submit" class="btn--primary mb-4">Zapisz się</button>
                 <div class="form-info">
-                    <a href="#" class="text-[14px] font-extralight transition-all duration-300 hover:text-primary">Polityka prywatności</a>
+                    <a href="https://www.termsfeed.com/live/5d16cd30-96c8-44a2-b704-03389dddbec9" target="_blank" class="text-[14px] font-extralight transition-all duration-300 hover:text-primary">Polityka prywatności</a>
                 </div>
             </div>
         </form>
